--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous">
-    <link rel="stylesheet" href="./Style.css" />
+    <link rel="stylesheet" href="./src/Style.css" />
     <link rel="stylesheet" href="./mobile-style.css">
   </head>
   
@@ -310,7 +310,7 @@
             <h4 class="text-light">About us</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea similique illum corrupti</p>
             <p class="pt-4 text-muted">Copyright ©2019 All rights reserved | This template is made with by
-              <span> Daily Tuition</span>
+              <span> Example website</span>
             </p>
           </div>
           <div class="col-md-5 col-sm-12">
